--- a/index.html
+++ b/index.html
@@ -77,7 +77,18 @@
 
             var app = new Vue({
                 el: '#app',
-                data: data
+                data: {
+                    maximum: 99,
+                    products: null
+                },
+
+                mounted: function(){
+                    fetch('https://hplussport.com/api/products/order/price')
+                    .then(response => response.json())
+                    .then(data => {
+                        this.products = data;
+                    })
+                }
             });
         </script>
     </body>
